tests/expectations/compiler/finalize/rand_incorrect_type_fail.out
DCE_ENABLED:
Error [ETYC0372117]: Expected type `scalar` but type `field` was found.
    --> compiler-test:11:25
     |
  11 |         let a: scalar = ChaCha::rand_field();
     |                         ^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372117]: Expected type `group` but type `field` was found.
    --> compiler-test:12:24
     |
  12 |         let b: group = ChaCha::rand_field();
     |                        ^^^^^^^^^^^^^^^^^^^^

DCE_DISABLED:
Error [ETYC0372117]: Expected type `scalar` but type `field` was found.
    --> compiler-test:11:25
     |
  11 |         let a: scalar = ChaCha::rand_field();
     |                         ^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372117]: Expected type `group` but type `field` was found.
    --> compiler-test:12:24
     |
  12 |         let b: group = ChaCha::rand_field();
     |                        ^^^^^^^^^^^^^^^^^^^^
